Add health + ISLOCAL env

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -8,6 +8,7 @@ ENV REGION=us-west-2
 ENV AWS_ACCESS_KEY=test
 ENV AWS_SECRET_KEY=test
 ENV AWS_REGION=us-west-2
+ENV ISLOCAL=true
 
 COPY . ${SOURCES}
 WORKDIR ${SOURCES}
